# Torrente

./: .appveyor.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODING_GUIDELINES.md  CONTRIBUTING.md  COPYING  Changelog  INSTALL  NEWS  README.md  TODO  build_dist.sh  codingStyleQtCreator.xml  conf.pri.windows  configure  configure.ac  macxconf.pri  ubuntu-build.sh  unixconf.pri  winconf.pri
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: ci.yaml  file_health.sh
.tx/: config
doc/: README.md  torrente-nox.1  torrente-nox.1.md  torrente.1  torrente.1.md
docs/: _config.yml  index.md
docs/_layouts/: default.html
src/: CMakeLists.txt  RCa21424  src.pro  torrente.rc  torrente_mingw.rc  update_qrc_files.py
src/app/: CMakeLists.txt  application.cpp  cmdoptions.cpp  cmdoptions.h  filelogger.cpp  main.cpp  stacktracedialog.cpp  stacktracedialog.h
src/base/: CMakeLists.txt  iconprovider.cpp  iconprovider.h  preferences.cpp  preferences.h  scanfoldersmodel.cpp  scanfoldersmodel.h  settingsstorage.cpp  unicodestrings.h  version.h.in
src/base/bittorrent/: bandwidthscheduler.cpp  bandwidthscheduler.h  filterparserthread.cpp  filterparserthread.h  session.cpp  session.h  speedmonitor.cpp  speedmonitor.h  statistics.cpp  torrent.cpp  torrent.h  torrentcreatorthread.cpp  torrentcreatorthread.h  torrentimpl.cpp  torrentimpl.h  tracker.cpp  tracker.h
src/base/encryption/: fileencryption.cpp  fileencryption.h
src/base/http/: connection.cpp  connection.h  requestparser.cpp  requestparser.h  responsegenerator.cpp  responsegenerator.h  server.cpp  server.h
src/base/net/: dnsupdater.cpp  dnsupdater.h  downloadhandlerimpl.cpp  downloadhandlerimpl.h  downloadmanager.cpp  downloadmanager.h  geoipmanager.cpp  geoipmanager.h  reverseresolution.cpp  reverseresolution.h  smtp.cpp  smtp.h
src/base/payfluxo/: payfluxo.cpp  payfluxo.h  payfluxonotification.cpp  payfluxonotification.h  payfluxoservice.cpp  payfluxoservice.h  payfluxosession.cpp  payfluxosession.h
src/base/rss/: rss_article.cpp  rss_article.h  rss_autodownloader.cpp  rss_autodownloadrule.cpp  rss_autodownloadrule.h  rss_feed.cpp  rss_feed.h  rss_folder.cpp  rss_folder.h  rss_item.cpp  rss_item.h  rss_parser.cpp  rss_parser.h  (+2 more)
src/gui/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  addnewtorrentdialog.cpp  addnewtorrentdialog.h  advancedsettings.cpp  authdialog.cpp  authdialog.h  authdialog.ui  balancedialog.cpp  balancedialog.h  balancedialog.ui  decypherdialog.cpp  decypherdialog.h  decypherdialog.ui  deletionconfirmationdialog.cpp  deletionconfirmationdialog.h  downloadfromurldialog.cpp  downloadfromurldialog.h  executionlogwidget.h  gpl.html  hidabletabwidget.cpp  hidabletabwidget.h  ipotable.cpp  ipotable.h  ipotable.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  paychoicedialog.cpp  paychoicedialog.h  paychoicedialog.ui  previewlistdelegate.cpp  previewlistdelegate.h  previewselectdialog.cpp  previewselectdialog.h  (+34 more)
src/gui/powermanagement/: powermanagement.cpp  powermanagement_x11.cpp
src/gui/properties/: downloadedpiecesbar.cpp  downloadedpiecesbar.h  peerlistwidget.cpp  peerlistwidget.h  peersadditiondialog.cpp  peersadditiondialog.h  pieceavailabilitybar.cpp  pieceavailabilitybar.h  propertieswidget.cpp  propertieswidget.h  propertieswidget.ui  proplistdelegate.cpp  proplistdelegate.h  proptabbar.cpp  proptabbar.h  trackerlistwidget.cpp  trackerlistwidget.h  trackersadditiondialog.cpp  trackersadditiondialog.h
src/gui/rss/: automatedrssdownloader.cpp  automatedrssdownloader.h  feedlistwidget.cpp  feedlistwidget.h  rsswidget.cpp  rsswidget.h
src/gui/search/: pluginselectdialog.cpp  pluginselectdialog.h  pluginselectdialog.ui  pluginsourcedialog.cpp  pluginsourcedialog.h  searchjobwidget.cpp  searchjobwidget.h  searchwidget.cpp  searchwidget.h
src/icons/: README.md  icons.qrc
src/lang/: TRANSLATION_INSTRUCTIONS  lang.qrc  torrente_ar.ts  torrente_az@latin.ts  torrente_be.ts  torrente_bg.ts  torrente_ca.ts  torrente_cs.ts  torrente_da.ts  torrente_de.ts  torrente_el.ts  torrente_en.ts  torrente_en_AU.ts  torrente_en_GB.ts  torrente_eo.ts  torrente_es.ts  torrente_et.ts  torrente_eu.ts  torrente_fi.ts  torrente_fr.ts  torrente_gl.ts  torrente_he.ts  torrente_hi_IN.ts  torrente_hr.ts  torrente_hu.ts  torrente_hy.ts  torrente_id.ts  torrente_is.ts  torrente_it.ts  torrente_ja.ts  torrente_ka.ts  torrente_ko.ts  torrente_lt.ts  torrente_ltg.ts  torrente_lv_LV.ts  torrente_ms_MY.ts  torrente_nb.ts  torrente_nl.ts  torrente_oc.ts  torrente_pl.ts  (+15 more)
(+119 files in other folders)
